--- a/components/Header/Header.css
+++ b/components/Header/Header.css
@@ -1,9 +1,24 @@
 header{
 	background-color:rgba(0,0,0,0.7);
 	height: 80px;
+	position: relative;
+	z-index: 1;
 	nav {
 		margin: auto;
+		text-align: left;
 		max-width: 1024px;
-		background-color: rgb(0,255,0);
+	}
+	.link {
+		display: inline-block;
+		height: 80px;
+    vertical-align: middle;
+    padding: 16px;
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+		color: #fff;
+		&:hover{
+			background-color:rgba(255,255,255,0.5);
+		}
 	}
 }
