--- a/public/js/css/app.css
+++ b/public/js/css/app.css
@@ -1,13 +1,34 @@
 header{
 	background-color:rgba(0,0,0,0.7);
 	height: 80px;
+	position: relative;
+	z-index: 1;
 }
 header nav {
 	margin: auto;
+	text-align: left;
 	max-width: 1024px;
-	background-color: rgb(0,255,0);
-}.page-home{
+}
+header .link {
+	display: inline-block;
+	height: 80px;
+	vertical-align: middle;
 	padding: 16px;
+	display: -webkit-inline-box;
+	display: -ms-inline-flexbox;
+	display: inline-flex;
+	-webkit-box-pack: center;
+	    -ms-flex-pack: center;
+	        justify-content: center;
+	-webkit-box-align: center;
+	    -ms-flex-align: center;
+	        align-items: center;
+	color: #fff
+}
+header .link:hover{
+	background-color:rgba(255,255,255,0.5);
+}.page-home{
+	margin-top: -80px;
 }.App {
   text-align: center;
 }
@@ -42,4 +63,26 @@ body {
   margin: 0;
   padding: 0;
   font-family: sans-serif;
+}
+
+.lightFont{
+  font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
+  font-weight: 300;
+}
+
+.normalFont{
+  font-family: "HelveticaNeue", "Helvetica Neue", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
+}
+
+.boldFont{
+  font-family: "HelveticaNeue-bold", "Helvetica Neue Bold", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
+  font-weight: 700;
+}
+
+* {
+  box-sizing: border-box;
+}
+
+a {
+  text-decoration: none;
 }
