--- a/components/Home/Home.css
+++ b/components/Home/Home.css
@@ -1,3 +1,15 @@
 .page-home{
 	margin-top: -80px;
+	.cover{
+		width: 100%;
+		height: 350px;
+	}
+}
+
+@media screen and (max-width: 1024px) {
+	.page-home{
+		.cover{
+			height: auto;
+		}
+	}
 }
