--- a/public/js/css/app.css
+++ b/public/js/css/app.css
@@ -4,11 +4,13 @@ header{
 	position: relative;
 	z-index: 1;
 }
-header nav {
+
+header nav.desktop{
 	margin: auto;
 	text-align: left;
 	max-width: 1024px;
 }
+
 header .link {
 	display: inline-block;
 	height: 80px;
@@ -25,41 +27,32 @@ header .link {
 	        align-items: center;
 	color: #fff
 }
+
 header .link:hover{
 	background-color:rgba(255,255,255,0.5);
+}
+
+@media screen and (max-width: 1024px) {
+	header{
+		background-color:transparent;
+	}
+	header nav.desktop{
+		display: none;
+	}
 }.page-home{
 	margin-top: -80px;
-}.App {
-  text-align: center;
 }
 
-.App-logo {
-  -webkit-animation: App-logo-spin infinite 20s linear;
-          animation: App-logo-spin infinite 20s linear;
-  height: 80px;
+.page-home .cover{
+	width: 100%;
+	height: 350px;
 }
 
-.App-header {
-  background-color: #222;
-  height: 150px;
-  padding: 20px;
-  color: white;
-}
-
-.App-intro {
-  font-size: large;
-}
-
-@-webkit-keyframes App-logo-spin {
-  from { -webkit-transform: rotate(0deg); transform: rotate(0deg); }
-  to { -webkit-transform: rotate(360deg); transform: rotate(360deg); }
-}
-
-@keyframes App-logo-spin {
-  from { -webkit-transform: rotate(0deg); transform: rotate(0deg); }
-  to { -webkit-transform: rotate(360deg); transform: rotate(360deg); }
-}
-body {
+@media screen and (max-width: 1024px) {
+	.page-home .cover{
+		height: auto;
+	}
+}body {
   margin: 0;
   padding: 0;
   font-family: sans-serif;
