--- a/public/js/css/app.css
+++ b/public/js/css/app.css
@@ -39,11 +39,11 @@ header .link:hover{
 	header nav.desktop{
 		display: none;
 	}
-}.page-home{
+}.page.page-home{
 	margin-top: -80px;
 }
 
-.page-home .cover{
+.page.page-home .cover{
 	width: 100%;
 	height: 350px;
 }
