--- a/components/Home/Home.css
+++ b/components/Home/Home.css
@@ -1,7 +1,7 @@
 .page.page-home{
 	margin-top: -80px;
 	.cover{
-		width: 100%;
+		width: 1024px;
 		height: 350px;
 	}
 }
@@ -9,6 +9,7 @@
 @media screen and (max-width: 1024px) {
 	.page-home{
 		.cover{
+			width: 100%;
 			height: auto;
 		}
 	}
