--- a/public/js/css/app.css
+++ b/public/js/css/app.css
@@ -78,11 +78,11 @@ header .sidebar-switch{
 
 .page.page-home .mobCover{
 	margin-bottom:15px;
-	height: 300px;
+	height: 500px;
 	width: 100%;
 	background-position: center;
 	background-size: cover;
-	background-image: url('https://placeholdit.imgix.net/~text?txtsize=33&txt=ICYAH&w=1024&h=350');
+	background-image: url('https://placeholdit.imgix.net/~text?txtsize=33&txt=ICYAH&w=1024&h=500');
 }
 
 @media screen and (max-width: 1024px) {
@@ -327,7 +327,11 @@ p + .typl8-drop-cap {
   right: 0;
 }.page{
 	max-width: 1024px;
-	margin: auto;
+	margin: 20px auto;
+}
+
+.inline-block{
+	display: inline-block;
 }
 
 @media screen and (max-width: 1024px) {
