--- a/components/Header/Header.css
+++ b/components/Header/Header.css
@@ -19,6 +19,7 @@ header{
     justify-content: center;
     align-items: center;
 		color: #fff;
+		text-transform: uppercase;
 		&:hover{
 			background-color:rgba(255,255,255,0.5);
 		}
