--- a/components/Home/Home.css
+++ b/components/Home/Home.css
@@ -6,7 +6,15 @@
 		width: 100%;
 		background-position: center;
 		background-size: cover;
-		background-image: url('https://placeholdit.imgix.net/~text?txtsize=33&txt=ICYAH&w=1024&h=500');
+		background-image: url('/images/cover.jpg');
+	}
+	.from{
+		margin-top: 25px;
+	}
+	.head{
+		font-size: 35px;
+    margin-bottom: 25px;
+    font-weight: 700;
 	}
 }
 
