--- a/public/js/css/app.css
+++ b/public/js/css/app.css
@@ -11,6 +11,10 @@ header nav.sidebar{
 	max-width: 1024px;
 }
 
+header .logo.link {
+	padding: 0;
+}
+
 header .link {
 	display: inline-block;
 	height: 80px;
@@ -83,7 +87,17 @@ header .sidebar-switch{
 	width: 100%;
 	background-position: center;
 	background-size: cover;
-	background-image: url('https://placeholdit.imgix.net/~text?txtsize=33&txt=ICYAH&w=1024&h=500');
+	background-image: url('/images/cover.jpg');
+}
+
+.page.page-home .from{
+	margin-top: 25px;
+}
+
+.page.page-home .head{
+	font-size: 35px;
+	margin-bottom: 25px;
+	font-weight: 700;
 }
 
 @media screen and (max-width: 1024px) {
