--- a/index.mustache
+++ b/index.mustache
@@ -9,6 +9,9 @@
   </head>
   <body>
     <div id="root"></div>
+    <script>
+      window.user={{{user}}};
+    </script>
     <script src="/public/js/vendor.bundle.js"></script>
     <script src="/public/js/app.js"></script>
   </body>
