--- a/components/Abstract/Abstract.css
+++ b/components/Abstract/Abstract.css
@@ -1,15 +1,9 @@
 .page-abstract{
 	label{
 		display: inline-block;
-		width: 100px;
+		width: 200px;
 	}
-	input.typl8-zeta{
-		width: 250px;
-		border : 0px solid #00aaee;
-		border-bottom-width: 1px;
-		outline: 0px;
-	}
-	.submit{
+	.submit, button{
 		border:0px;
 		color: #fff;
 		padding: 8px 16px;
@@ -27,4 +21,13 @@
 	.text{
 		display: inline-block;
 	}
+}
+
+
+input.typl8-zeta{
+	width: 250px;
+	border : 0px solid #00aaee;
+	margin-top: 16px;
+	border-bottom-width: 1px;
+	outline: 0px;
 }
