--- a/components/Header/Header.css
+++ b/components/Header/Header.css
@@ -12,6 +12,10 @@ header{
 			align-self: center;
 			padding: 32px;
 		}
+		.logo-iaah{
+			justify-content: flex-start;
+			align-self: center;
+		}
 		.desc-icyah{
 			flex-direction: column;
 			align-items: center;
@@ -63,6 +67,7 @@ header{
 		align-items: center;
 		color: #fff;
 		text-transform: uppercase;
+		cursor: pointer;
 		&:hover{
 			background-color:rgba(255,255,255,0.5);
 			.sublinks{
@@ -86,8 +91,9 @@ header{
 	.sublink{
 		color: #fff;
 		padding: 8px;
-		width: 150px;
+		width: 200px;
 		display: inline-block;
+		font-size: 14px;
 	}
 }
 
