--- a/public/js/css/app.css
+++ b/public/js/css/app.css
@@ -25,6 +25,15 @@ header .logos .logo-icyah{
 	padding: 32px;
 }
 
+header .logos .logo-iaah{
+	-webkit-box-pack: start;
+	    -ms-flex-pack: start;
+	        justify-content: flex-start;
+	-ms-flex-item-align: center;
+	    -ms-grid-row-align: center;
+	    align-self: center;
+}
+
 header .logos .desc-icyah{
 	-webkit-box-orient: vertical;
 	-webkit-box-direction: normal;
@@ -98,7 +107,8 @@ header .link {
 	    -ms-flex-align: center;
 	        align-items: center;
 	color: #fff;
-	text-transform: uppercase
+	text-transform: uppercase;
+	cursor: pointer
 }
 
 header .link:hover{
@@ -127,8 +137,9 @@ header .sublinks{
 header .sublink{
 	color: #fff;
 	padding: 8px;
-	width: 150px;
+	width: 200px;
 	display: inline-block;
+	font-size: 14px;
 }
 
 @media screen and (max-width: 1024px) {
