dummy registration setup

--- a/index.mustache
+++ b/index.mustache
@@ -14,5 +14,6 @@
     </script>
     <script src="/public/js/vendor.bundle.js"></script>
     <script src="/public/js/app.js"></script>
+    <script defer src="https://checkout.razorpay.com/v1/checkout.js"></script>
   </body>
 </html>
