--- a/public/js/css/app.css
+++ b/public/js/css/app.css
@@ -271,19 +271,6 @@ header .sublink{
 }
 
 
-.page-abstract .submit, .page-abstract button{
-	border:0px;
-	color: #fff;
-	padding: 8px 16px;
-	min-width: 150px;
-	font-size: 20px;
-	border-radius: 3px;
-	margin: 8px auto;
-	background-color: #009688;
-	outline: 0px;
-}
-
-
 .page-abstract .icon-success{
 	vertical-align: middle;
 	margin-right: 15px;
@@ -300,6 +287,19 @@ input.typl8-zeta{
 	border : 0px solid #00aaee;
 	margin-top: 16px;
 	border-bottom-width: 1px;
+	outline: 0px;
+}
+
+
+.submit, button{
+	border:0px;
+	color: #fff;
+	padding: 8px 16px;
+	min-width: 150px;
+	font-size: 20px;
+	border-radius: 3px;
+	margin: 8px auto;
+	background-color: #009688;
 	outline: 0px;
 }.credentials{
     display: inline-block;
@@ -321,6 +321,9 @@ input.typl8-zeta{
 }
 .page-regfees .cell:last-child{
     border-right-width: 0px
+}.page-register .note{
+    font-size: 12px;
+    font-weight: 300;
 }@charset "UTF-8";
 /*!
 Typeplate : Starter Kit
